--- a/translations/dataFixtures.sk.po
+++ b/translations/dataFixtures.sk.po
@@ -745,9 +745,6 @@ msgstr "Velikost displeje"
 msgid "Display type"
 msgstr "Typ displeje"
 
-msgid "Do you have a question?"
-msgstr ""
-
 msgid "Dobrý den,<br /><br /> produkt <a href=\"{product_url}\">{product_name}</a>, který jste se rozhodli sledovat, je nyní k dispozici za vámi požadovanou cenu.<br /><br /> S pozdravem<br /> tým Tropic Fishing"
 msgstr ""
 
@@ -782,6 +779,21 @@ msgid "Doporučujeme"
 msgstr ""
 
 msgid "Doprodej"
+msgstr ""
+
+msgid "Dárkový kupón 1000 Kč"
+msgstr ""
+
+msgid "Dárkový kupón 500 Kč"
+msgstr ""
+
+msgid "Dárkový kupón v hodnotě 1000 Kč"
+msgstr ""
+
+msgid "Dárkový kupón v hodnotě 500 Kč"
+msgstr ""
+
+msgid "Dárkový kupón, který lze uplatnit na většinu neslevněných produktů v našem obchodu. Ideální dárek pro vaše rybářské kamarády."
 msgstr ""
 
 msgid "Dárkový poukaz"
@@ -1129,6 +1141,9 @@ msgstr "Optická myš od Roccat je to pravé pro opravdové hráče. Skvěle pad
 msgid "Multimedia"
 msgstr "Multimédia"
 
+msgid "Máte dotaz?"
+msgstr ""
+
 msgid "NFC"
 msgstr "NFC"
 
@@ -1249,6 +1264,9 @@ msgstr "OKI MC861cdxm"
 msgid "OKI MC861cdxn+ (01318206)"
 msgstr "OKI MC861cdxn+ (01318206)"
 
+msgid "OLED"
+msgstr ""
+
 msgid "OLYMPUS ME-34 Compact directional microphone suitable for recording lectures"
 msgstr "OLYMPUS ME-34 Kompaktní směrový mikrofon vhodný pro záznam přednášek"
 
@@ -1347,6 +1365,9 @@ msgstr ""
 
 msgid "Perfectly cleans, treats and protects stainless steel surfaces in one step.<ul> <li> <strong> remove </strong> without smudges dust, dirt, fingerprints and grease </li><li> long-lasting protective film <strong> repellent </strong> water and prevents new settling of dirt </li><li> <strong> acts </strong> antistatically </li></ul>"
 msgstr "<p>Dokonale čistí, ošetřuje a chrání nerezové plochy v jednom pracovním kroku.</p><ul><li><strong>odstraňuje</strong> bez šmouh prach, špínu, otisky prstů a mastnotu</li><li>dlouhotrvající ochranný film <strong>odpuzující</strong> vodu a zabraňující novému usazování špíny</li><li><strong>působí</strong> antistaticky</li><li><strong>neobsahuje</strong> silikon</li></ul>"
+
+msgid "Perfektní kaprový prut a dvoukomorové pouzdro"
+msgstr ""
 
 msgid "Personal Computers & accessories"
 msgstr "Počítače & příslušenství"
@@ -1900,6 +1921,9 @@ msgstr ""
 msgid "Výhodná sada příslušenství k vašemu počítači"
 msgstr ""
 
+msgid "Výhodný set prut + pouzdro"
+msgstr ""
+
 msgid "Výprodej"
 msgstr ""
 
@@ -1979,6 +2003,12 @@ msgid "Zahradní náčiní"
 msgstr ""
 
 msgid "Zásady ochrany osobních údajů"
+msgstr ""
+
+msgid "Zásilkovna CZ"
+msgstr ""
+
+msgid "Zásilkovna SK"
 msgstr ""
 
 msgid "battery"
