--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -4,7 +4,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs\n"
 
-msgid "%code% -%percent% (SP)"
+msgid "%code%"
+msgstr ""
+
+msgid "%code% -%percent%"
 msgstr ""
 
 msgid "%discountValue%% sleva"
@@ -21,6 +24,9 @@ msgstr "(Tato adresa bude na daňovém dokladu. Pokud nebude vyplněna, použije
 
 msgid "(kód %code%)"
 msgstr "(kód %code%)"
+
+msgid "+420 777 862 119"
+msgstr ""
 
 msgid ", Shopsys s.r.o. Všechna práva vyhrazena."
 msgstr ", Shopsys s.r.o. Všechna práva vyhrazena."
@@ -46,6 +52,9 @@ msgstr "1 - čtverec"
 msgid "2 - čtverec"
 msgstr "2 - čtverec"
 
+msgid "200m od prodejny Kaufland směr centrum, v prostorech budovy označené nyní Urban Sport"
+msgstr ""
+
 msgid "25 let záruku zdarma, objednat směnnou zásilku nebo"
 msgstr "25 let záruku zdarma, objednat směnnou zásilku nebo"
 
@@ -62,6 +71,9 @@ msgid "4 - velký obdélník na šířku"
 msgstr ""
 
 msgid "404-boot"
+msgstr ""
+
+msgid "483 10 44 44"
 msgstr ""
 
 msgid "6 důvodů, proč nakoupit u nás"
@@ -117,6 +129,12 @@ msgstr ""
 
 msgid "Advanced search"
 msgstr "Rozšířené vyhledávání"
+
+msgid "Akce na dopravu"
+msgstr ""
+
+msgid "Akce na titulní stránce"
+msgstr ""
 
 msgid "Aktivní"
 msgstr "Aktivní"
@@ -262,9 +280,6 @@ msgstr "Rubrika blogu <strong><a href=\"{{ url }}\">{{ name }}</a></strong> byla
 msgid "Blog category <strong>{{ name }}</strong> deleted"
 msgstr "Rubrika blogu <strong>{{ name }}</strong> byla smazána"
 
-msgid "Bonusový program"
-msgstr ""
-
 msgid "Brand"
 msgstr "Značka"
 
@@ -288,6 +303,12 @@ msgstr ""
 
 msgid "CSV Export"
 msgstr "CSV Export"
+
+msgid "Calculated price excluding VAT"
+msgstr ""
+
+msgid "Calculated price including VAT"
+msgstr ""
 
 msgid "Cart"
 msgstr "Košík"
@@ -329,9 +350,6 @@ msgid "Cenová"
 msgstr ""
 
 msgid "Cenové bomby na titulní stránce"
-msgstr ""
-
-msgid "Ceny se automaticky přepočítávají na Euro"
 msgstr ""
 
 msgid "Changing password"
@@ -502,6 +520,9 @@ msgstr "Česko"
 msgid "DHL"
 msgstr ""
 
+msgid "DIČ: CZ 25415981"
+msgstr ""
+
 msgid "DPD"
 msgstr "DPD"
 
@@ -510,6 +531,9 @@ msgstr "Další"
 
 msgid "Další fotografie"
 msgstr "Další fotografie"
+
+msgid "Další hodnocení zákazníků"
+msgstr ""
 
 msgid "Další informace"
 msgstr ""
@@ -634,6 +658,9 @@ msgstr "Související zboží"
 msgid "Domain"
 msgstr "Doména"
 
+msgid "Domain %domainName%"
+msgstr ""
+
 msgid "Doména"
 msgstr ""
 
@@ -649,14 +676,14 @@ msgstr "Doporučené rozměry obrázku"
 msgid "Doprava"
 msgstr "Doprava"
 
-msgid "Doprava ZDARMA od<br> 1 000 Kč"
-msgstr ""
-
 msgid "Doprava a platba"
 msgstr "Doprava a platba"
 
 msgid "Doprava objednávky"
 msgstr "Doprava objednávky"
+
+msgid "Doprava při nákupu nad 1000 Kč zdarma"
+msgstr ""
 
 msgid "Doprava zdarma"
 msgstr "Doprava zdarma"
@@ -699,6 +726,9 @@ msgstr "Stáhnout zákaznické údaje"
 
 msgid "Došlo ke změnám v košíku. Prosím, překontrolujte si produkty."
 msgstr "Došlo ke změnám v košíku. Prosím, překontrolujte si produkty."
+
+msgid "Dr. M. Horákové 76, <br>460 07 Liberec"
+msgstr ""
 
 msgid "Druhý článek v horním menu"
 msgstr "Druhý článek v horním menu"
@@ -775,6 +805,9 @@ msgstr "E-mailem"
 msgid "E-shop URL address"
 msgstr "Adresa eshopu"
 
+msgid "E-shop attributes settings modified"
+msgstr ""
+
 msgid "E-shop na míru od"
 msgstr "E-shop na míru od"
 
@@ -844,6 +877,9 @@ msgstr "Aha, tak tady je něco špatně."
 msgid "Error occurred when sending e-mail."
 msgstr "Při odesílání e-mailu se něco nepovedlo."
 
+msgid "Excl. VAT"
+msgstr ""
+
 msgid "Exclude from sale"
 msgstr "Vyjmout z výprodeje"
 
@@ -867,6 +903,9 @@ msgstr "Facebook"
 
 msgid "Fakturační adresa"
 msgstr "Fakturační adresa"
+
+msgid "Fakturační údaje"
+msgstr ""
 
 msgid "Files"
 msgstr "Soubory"
@@ -906,9 +945,6 @@ msgstr "GEIS"
 
 msgid "GLS"
 msgstr "GLS"
-
-msgid "Garance nejvýhodnější cenové nabídky"
-msgstr ""
 
 msgid "Generovat tento produkt do Mergado XML feedu"
 msgstr ""
@@ -985,8 +1021,14 @@ msgstr ""
 msgid "Hlídač dostupnosti"
 msgstr ""
 
+msgid "Hmotnost"
+msgstr ""
+
 msgid "Hodiny"
 msgstr "Hodiny"
+
+msgid "Hodnocení našich zákazníků"
+msgstr ""
 
 msgid "Hodnota"
 msgstr "Hodnota"
@@ -1072,6 +1114,9 @@ msgstr "Na konkrétní záložce domény není možné upravovat pořadí a zano
 msgid "In a particular domain tab it is not possible to adjust the order and plunge of categories. Please go to the category detail or to overview of categories of all domains"
 msgstr "Na záložce konkrétní domény není možné upravovat pořadí a zanoření kategorií. Prosím přejděte na kartu kategorie nebo na přehled kategorií všech domén."
 
+msgid "Incl. VAT"
+msgstr ""
+
 msgid "Informace o zákazníkovi"
 msgstr ""
 
@@ -1102,6 +1147,9 @@ msgstr ""
 msgid "Items"
 msgstr "Položky"
 
+msgid "IČO: 25415981"
+msgstr ""
+
 msgid "IČO: 27790487, DIČ: CZ27790487"
 msgstr "IČO: 27790487, DIČ: CZ27790487"
 
@@ -1119,9 +1167,6 @@ msgstr "Jazyk"
 
 msgid "Je nám líto"
 msgstr "Je nám líto"
-
-msgid "Je nám líto, požadovaná stránka na našem webu neexistuje."
-msgstr "Bohužel, požadovaná stránka na našem webu neexistuje."
 
 msgid "Je prodejna franchisa"
 msgstr "Je prodejna franšíza"
@@ -1156,6 +1201,9 @@ msgstr ""
 msgid "Kalkulačka se bude od této cenové hladiny zobrazovat na detailu produktu."
 msgstr ""
 
+msgid "Kamenná prodejna"
+msgstr ""
+
 msgid "Karta"
 msgstr ""
 
@@ -1167,9 +1215,6 @@ msgstr "Kategorie v Mall.cz"
 
 msgid "Kategorie článků"
 msgstr "Kategorie článků"
-
-msgid "Každý týden"
-msgstr ""
 
 msgid "Ke každému nákupu dárek v hodnotě"
 msgstr "Ke každému nákupu dárek v hodnotě"
@@ -1227,9 +1272,6 @@ msgstr "Poslední objednávka"
 
 msgid "Levý textový baner dole"
 msgstr "Levý textový baner dole"
-
-msgid "Liberce"
-msgstr ""
 
 msgid "Link to password reset sent to e-mail <strong>{{ email }}</strong>."
 msgstr "Odkaz pro opětovné nastavení hesla jsme vám zaslali na e-mail <strong>{{ email }}</strong>."
@@ -1300,6 +1342,12 @@ msgstr "Vzkaz"
 msgid "Meta description"
 msgstr "Meta description"
 
+msgid "Migrace - import CSV"
+msgstr ""
+
+msgid "Migrační CSV soubor"
+msgstr ""
+
 msgid "Minimum amount"
 msgstr "Minimální množství pro nákup"
 
@@ -1312,6 +1360,12 @@ msgstr "Minimální cena košíku"
 msgid "Minimální cena košíku s DPH (v %currencySymbol%)"
 msgstr "Minimální cena košíku s DPH (v %currencySymbol%)"
 
+msgid "Minimální cena objednávky pro akci na dopravu"
+msgstr ""
+
+msgid "Minimální cena objednávky pro dopravu zdarma"
+msgstr ""
+
 msgid "Minimální hodnota objednávky"
 msgstr "Minimální hodnota objednávky"
 
@@ -1320,9 +1374,6 @@ msgstr "Minimální množství můžete nastavit na kartě hlavní varianty."
 
 msgid "Minuty"
 msgstr "Minuty"
-
-msgid "Moderní"
-msgstr ""
 
 msgid "Mohlo by vás zajímat"
 msgstr "Mohlo by vás zajímat"
@@ -1335,6 +1386,12 @@ msgstr "Více informací"
 
 msgid "Move"
 msgstr "Přesunout"
+
+msgid "Možnost nákupu na splátky"
+msgstr ""
+
+msgid "Možnost vrácení zboží do 30 dnů"
+msgstr ""
 
 msgid "Možnosti dopravy"
 msgstr "Možnosti dopravy"
@@ -1375,7 +1432,13 @@ msgstr ""
 msgid "Nabízené produkty"
 msgstr ""
 
+msgid "Nadpis"
+msgstr ""
+
 msgid "Nadrozměrný"
+msgstr ""
+
+msgid "Nahrát soubor"
 msgstr ""
 
 msgid "Najdete v kategoriích"
@@ -1456,8 +1519,11 @@ msgstr ""
 msgid "Nejoblíbenější kousky"
 msgstr "Nejoblíbenější kousky"
 
-msgid "Nemusíte mít za sebou naplavaných tisíce kilometrů, abyste zlepšili techniku a také výdrž. Poradíme vám."
-msgstr "Nemusíte mít za sebou naplavaných tisíce kilometrů, abyste zlepšili techniku a také výdrž. Poradíme vám."
+msgid "Nejprodávanější produkty"
+msgstr ""
+
+msgid "Nejširší sortiment - v nabídce více než 100&nbsp;000 produktů"
+msgstr ""
 
 msgid "Nemáte oprávnění vidět požadovanou stránku. Požádejte svého administrátora o udělení přístupu."
 msgstr "Nemáte oprávnění vidět požadovanou stránku. Požádejte svého administrátora o udělení přístupu."
@@ -1494,6 +1560,9 @@ msgstr "Nepovinný název pro administraci"
 
 msgid "Nepovinný údaj"
 msgstr "Nepovinný údaj"
+
+msgid "Nesouhlasím se zasláním dotazníku spokojenosti s nákupem od Heureky"
+msgstr ""
 
 msgid "Nesouhlasím se zasláním objednávky do programu Heureka Ověřeno zákazníky"
 msgstr "Nesouhlasím se zasláním objednávky do programu Heureka Ověřeno zákazníky"
@@ -1597,6 +1666,9 @@ msgstr "Nyní budete přesměrováni na platební bránu GoPay."
 msgid "Nákupní košík"
 msgstr ""
 
+msgid "Nálepka Prodloužená záruka"
+msgstr ""
+
 msgid "Násobky pro nákup můžete nastavit na kartě hlavní varianty."
 msgstr "Násobky pro nákup můžete nastavit na kartě hlavní varianty."
 
@@ -1611,6 +1683,9 @@ msgstr "Název dárku - produktu"
 
 msgid "Název pobočky"
 msgstr "Název pobočky"
+
+msgid "Název pro feed"
+msgstr ""
 
 msgid "Název produktu"
 msgstr ""
@@ -1704,6 +1779,9 @@ msgstr "Odeslána"
 
 msgid "Odesílána"
 msgstr "Odesílána"
+
+msgid "Odkaz"
+msgstr ""
 
 msgid "Odkaz pro sledování zásilky"
 msgstr "Odkaz pro sledování zásilky"
@@ -1810,17 +1888,26 @@ msgstr "Pořadí uloženo."
 msgid "Orders value"
 msgstr "Hodnota objednávek"
 
+msgid "Osobni odběr"
+msgstr ""
+
 msgid "Osobní údaje"
 msgstr "Osobní údaje"
 
 msgid "Ostatní"
 msgstr "Ostatní"
 
+msgid "Otevírací doba"
+msgstr ""
+
 msgid "Otevřena"
 msgstr "Otevřena"
 
 msgid "Our customers who bought this bought also"
 msgstr "Naši zákazníci k tomuto produktu nejčastěji nakupují"
+
+msgid "Ověřený zákazník"
+msgstr ""
 
 msgid "Ozvěte se nejlépe ve všední dny mezi"
 msgstr "Ozvěte se nejlépe ve všední dny mezi"
@@ -1912,11 +1999,14 @@ msgstr "Platný do"
 msgid "Platný od"
 msgstr "Platný od"
 
+msgid "Platí do"
+msgstr ""
+
+msgid "Platí od"
+msgstr ""
+
 msgid "Platí pro"
 msgstr "Platí pro"
-
-msgid "Plavecké potřeby"
-msgstr "Plavecké potřeby"
 
 msgid "Please check the correctness of all data filled."
 msgstr "Určitě máte všechny údaje vyplněny správně?"
@@ -1993,9 +2083,6 @@ msgstr "Popisy hlavních obrázků"
 msgid "Popular categories"
 msgstr "Rozcestník kategorií"
 
-msgid "Poradíme s plaváním"
-msgstr "Poradíme s plaváním"
-
 msgid "Poslední aktualizace z IS"
 msgstr ""
 
@@ -2021,6 +2108,9 @@ msgid "Povolit nadrozměrné produkty"
 msgstr ""
 
 msgid "Povolit objemné produkty"
+msgstr ""
+
+msgid "Pozice"
 msgstr ""
 
 msgid "Poznejte nás"
@@ -2109,6 +2199,9 @@ msgstr ""
 
 msgid "Prodejny"
 msgstr "Prodejny"
+
+msgid "Prodloužená záruka"
+msgstr ""
 
 msgid "Product <strong>{{ name }}</strong> ({{ quantity|formatNumber }} {{ unitName }}) added to the cart"
 msgstr "Do košíku bylo vloženo zboží <strong>{{ name }}</strong> ({{ quantity|formatNumber }} {{ unitName }})"
@@ -2236,9 +2329,6 @@ msgstr "První článek v horním menu"
 msgid "Prázdný"
 msgstr "Prázdný"
 
-msgid "Představujeme trendy, radíme jak trénovat a ukazujeme naši firmu"
-msgstr "Představujeme trendy, radíme jak trénovat a ukazujeme naši firmu"
-
 msgid "Předvýpis kategorií"
 msgstr "Předvýpis kategorií"
 
@@ -2365,16 +2455,13 @@ msgstr "Rozbalit"
 msgid "Rozlišující parametr"
 msgstr "Rozlišující parametr"
 
-msgid "Rybařině rozumíme. V týmu je i"
+msgid "Rybařině rozumíme - v teamu je i mistr světa"
 msgstr ""
 
 msgid "Rybařině rozumíme. V týmu je i mistr světa"
 msgstr ""
 
 msgid "Rybky"
-msgstr ""
-
-msgid "Rybářům pomáháme od<br> roku 2000"
 msgstr ""
 
 msgid "S čím potřebujete pomoct?"
@@ -2539,7 +2626,7 @@ msgstr "Sleva"
 msgid "Sleva %"
 msgstr ""
 
-msgid "Sleva %percent% (BP)"
+msgid "Sleva %percent%"
 msgstr ""
 
 msgid "Sleva na celý nákup"
@@ -2549,6 +2636,9 @@ msgid "Sleva na celý nákup byla smazána"
 msgstr ""
 
 msgid "Sleva na celý nákup neexistuje"
+msgstr ""
+
+msgid "Sleva za registraci"
 msgstr ""
 
 msgid "Slevové kupóny byly smazány."
@@ -2581,9 +2671,6 @@ msgstr "Slevový kupón nelze aplikovat na žádný produkt v košíku."
 msgid "Slevový kód"
 msgstr "Slevový kód"
 
-msgid "Slevy pro každého až 18 %"
-msgstr ""
-
 msgid "Slovakia"
 msgstr "Slovensko"
 
@@ -2595,6 +2682,9 @@ msgstr ""
 
 msgid "Smazat všechny"
 msgstr "Smazat všechny"
+
+msgid "Smazat všechny soubory"
+msgstr ""
 
 msgid "Snažíte se koupit více kusů, než je skladem."
 msgstr "Snažíte se koupit více kusů, než máme skladem."
@@ -2620,9 +2710,6 @@ msgstr "Souhlasíte se sběrem cookies?"
 msgid "Související zboží"
 msgstr "Související zboží"
 
-msgid "Specialisti na běh"
-msgstr "Specialisti na běh"
-
 msgid "Spisová značka C 51890 vedená u rejstříkového soudu v Ostravě."
 msgstr "Spisová značka C 51890 vedená u rejstříkového soudu v Ostravě."
 
@@ -2640,6 +2727,9 @@ msgstr "Stav exportu do IS"
 
 msgid "Stav platby GoPay"
 msgstr "Stav platby GoPay"
+
+msgid "Stav přenosu"
+msgstr ""
 
 msgid "Stav přenosu do IS"
 msgstr "Stav přenosu do IS"
@@ -2689,11 +2779,14 @@ msgstr "Přihlášení k odběru newsletteru"
 msgid "Sídlo"
 msgstr "Sídlo"
 
+msgid "TOP Značky"
+msgstr ""
+
 msgid "TOPTRANS"
 msgstr "TOPTRANS"
 
 msgid "Tak tady nic nechytíš :-)"
-msgstr ""
+msgstr "Tady nic nechytíš :)"
 
 msgid "Tax number"
 msgstr "DIČ"
@@ -2740,6 +2833,9 @@ msgstr "Text"
 msgid "Text tlačítka"
 msgstr "Text tlačítka"
 
+msgid "Text v hlavičce"
+msgstr ""
+
 msgid "Text zprávy"
 msgstr ""
 
@@ -2762,7 +2858,7 @@ msgid "There were problems during payment of created order with number %orderNum
 msgstr "Během placení vytvořené objednávky č. %orderNumber% došlo k potížím."
 
 msgid "This account doesn't exist or password is incorrect"
-msgstr "Máte zadáno špatné uživatelské jméno nebo heslo"
+msgstr "Máte zadané špatné uživatelské jméno nebo heslo"
 
 msgid "This blog category contains no blog articles."
 msgstr "Tato rubrika blogu neobsahuje žádné články."
@@ -2917,6 +3013,9 @@ msgstr ""
 msgid "User not found."
 msgstr "Uživatel nebyl nalezen."
 
+msgid "Ušetříte %price%"
+msgstr ""
+
 msgid "Už máš aplikován jiný slevový kupón, a tento kupón nelze kombinovat."
 msgstr "Už máte aplikován jiný slevový kupón a tento kupón nelze kombinovat."
 
@@ -2940,6 +3039,9 @@ msgstr "V prvním sloupci"
 
 msgid "V pátek"
 msgstr "V pátek"
+
+msgid "V případě jakýchkoliv dotazů volejte na číslo"
+msgstr ""
 
 msgid "V sobotu"
 msgstr "V sobotu"
@@ -3127,6 +3229,9 @@ msgstr "Vyhledávání neodpovídá žádný produkt"
 msgid "Vyhledávání výrazu"
 msgstr ""
 
+msgid "Vyhlídková 655, 463 12 Liberec 25<br>Vedené u Krajského soudu v Ústí nad Labem oddíl C,<br> vložka 16777."
+msgstr ""
+
 msgid "Vyjmout ze slev za registraci"
 msgstr ""
 
@@ -3138,12 +3243,6 @@ msgstr ""
 
 msgid "Vyplnit dodací údaje"
 msgstr "Vyplnit dodací údaje"
-
-msgid "Vyprodané zboží"
-msgstr ""
-
-msgid "Vyprodané zboží se zobrazuje ve výpisech a lze jej vyhledat. Detail tohoto zboží je dostupný přímým přístupem z URL, zboží ale nelze vložit do košíku."
-msgstr ""
 
 msgid "Vytvořeno"
 msgstr ""
@@ -3217,7 +3316,13 @@ msgstr ""
 msgid "Výrobce"
 msgstr ""
 
+msgid "Výrobci"
+msgstr ""
+
 msgid "Výrobek"
+msgstr ""
+
+msgid "Výrobek od dodavatele"
 msgstr ""
 
 msgid "Výsledky výrazu:"
@@ -3229,11 +3334,11 @@ msgstr "Věrnostní program"
 msgid "Větší množství není možné nakoupit"
 msgstr ""
 
-msgid "Vše pro běhání"
-msgstr "Vše pro běhání"
-
 msgid "Všechny produkty"
 msgstr "Všechny produkty"
+
+msgid "Vždy vyčkejte, až vás budeme informovat, že zboží je připravené k odběru."
+msgstr ""
 
 msgid "Yes"
 msgstr "Ano"
@@ -3295,8 +3400,11 @@ msgstr "Zadejte kód"
 msgid "Zadejte město nebo PSČ:"
 msgstr "Zadejte město nebo PSČ:"
 
-msgid "Zaměřujeme se na triatlon. Proto vám dokážeme poradit vybrat správné cyklistické a plavecké vybavení, ale také běžecké."
-msgstr "Zaměřujeme se na triatlon. Proto vám dokážeme poradit vybrat správné cyklistické a plavecké vybavení, ale také běžecké."
+msgid "Zahraniční dodavatel"
+msgstr ""
+
+msgid "Založeno 2000 - tradice prodeje již 20 let"
+msgstr ""
 
 msgid "Zaplatit"
 msgstr "Zaplatit"
@@ -3306,6 +3414,12 @@ msgstr "Zapomenuté heslo?"
 
 msgid "Zatím nepřeneseno"
 msgstr "Zatím nepřeneseno"
+
+msgid "Zatím nepřeneseno nebo chyba při přenosu"
+msgstr ""
+
+msgid "Zaškrtnout všechny parametry"
+msgstr ""
 
 msgid "Zboží do Česka"
 msgstr ""
@@ -3430,6 +3544,12 @@ msgstr ""
 msgid "Zásilkovna"
 msgstr "Zásilkovna"
 
+msgid "Zásilkovna CZ"
+msgstr ""
+
+msgid "Zásilkovna SK"
+msgstr ""
+
 msgid "Zítra"
 msgstr "Zítra"
 
@@ -3446,6 +3566,9 @@ msgid "a máte"
 msgstr ""
 
 msgid "a registrace"
+msgstr ""
+
+msgid "a telefon"
 msgstr ""
 
 msgid "a údaje vám předvyplníme."
@@ -3490,9 +3613,6 @@ msgstr ""
 msgid "ks"
 msgstr ""
 
-msgid "mistr světa"
-msgstr ""
-
 msgid "možnost získat"
 msgstr "možnost získat"
 
@@ -3529,9 +3649,6 @@ msgstr "neznámá"
 msgid "neznámé"
 msgstr "neznámé"
 
-msgid "nová nabídka"
-msgstr ""
-
 msgid "o nákupu"
 msgstr "o nákupu"
 
@@ -3547,22 +3664,16 @@ msgstr "na skladě"
 msgid "osobních údajů"
 msgstr "osobních údajů"
 
-msgid "pouze členy Věrnostního programu"
-msgstr "pouze členy Věrnostního programu"
-
-msgid "požadovaná stránk na našem"
-msgstr "požadovaná stránka na našem"
-
 msgid "požadovaná stránka na našem"
 msgstr ""
 
 msgid "požadovaná stránka na našem webu neexistuje."
-msgstr ""
+msgstr "Požadovaná stránka na našem webu neexistuje."
 
 msgid "problémů"
 msgstr "problémů"
 
-msgid "prodejna v centru"
+msgid "prodejna@tropicfishing.cz"
 msgstr ""
 
 msgid "prodejně"
@@ -3585,6 +3696,15 @@ msgstr ""
 
 msgid "souhlasím s"
 msgstr "souhlasím s"
+
+msgid "store1"
+msgstr ""
+
+msgid "store2"
+msgstr ""
+
+msgid "store3"
+msgstr ""
 
 msgid "stores"
 msgstr "prodejen"
@@ -3620,9 +3740,6 @@ msgid "za"
 msgstr "za"
 
 msgid "za registraci může platit"
-msgstr ""
-
-msgid "za výhodné ceny"
 msgstr ""
 
 msgid "za zvýhodněnou cenu"
@@ -3684,6 +3801,9 @@ msgstr ""
 
 msgid "Úvod"
 msgstr "Úvod"
+
+msgid "Č. ú.: 115-7477930207/0100"
+msgstr ""
 
 msgid "Čas konce platnosti poukazu"
 msgstr ""
