--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -4,7 +4,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 
-msgid "%code% -%percent% (SP)"
+msgid "%code%"
+msgstr ""
+
+msgid "%code% -%percent%"
 msgstr ""
 
 msgid "%discountValue%% sleva"
@@ -21,6 +24,9 @@ msgstr "(This address will be on your tax receipt. If it is not filled in, the d
 
 msgid "(kód %code%)"
 msgstr "(code %code%)"
+
+msgid "+420 777 862 119"
+msgstr ""
 
 msgid ", Shopsys s.r.o. Všechna práva vyhrazena."
 msgstr ", Shopsys s.r.o. All rights reserved."
@@ -46,6 +52,9 @@ msgstr "1 - square"
 msgid "2 - čtverec"
 msgstr "2 - square"
 
+msgid "200m od prodejny Kaufland směr centrum, v prostorech budovy označené nyní Urban Sport"
+msgstr ""
+
 msgid "25 let záruku zdarma, objednat směnnou zásilku nebo"
 msgstr "25 years free warranty, order exchange shipment or"
 
@@ -62,6 +71,9 @@ msgid "4 - velký obdélník na šířku"
 msgstr ""
 
 msgid "404-boot"
+msgstr ""
+
+msgid "483 10 44 44"
 msgstr ""
 
 msgid "6 důvodů, proč nakoupit u nás"
@@ -117,6 +129,12 @@ msgstr ""
 
 msgid "Advanced search"
 msgstr "Advanced search"
+
+msgid "Akce na dopravu"
+msgstr ""
+
+msgid "Akce na titulní stránce"
+msgstr ""
 
 msgid "Aktivní"
 msgstr "Active"
@@ -259,9 +277,6 @@ msgstr "Blog category <strong><a href=\"{{ url }}\">{{ name }}</a></strong> was 
 msgid "Blog category <strong>{{ name }}</strong> deleted"
 msgstr "Blog category <strong>{{ name }}</strong> deleted"
 
-msgid "Bonusový program"
-msgstr ""
-
 msgid "Brand"
 msgstr "Brand"
 
@@ -285,6 +300,12 @@ msgstr ""
 
 msgid "CSV Export"
 msgstr "CSV Export"
+
+msgid "Calculated price excluding VAT"
+msgstr ""
+
+msgid "Calculated price including VAT"
+msgstr ""
 
 msgid "Cart"
 msgstr "Cart"
@@ -326,9 +347,6 @@ msgid "Cenová"
 msgstr ""
 
 msgid "Cenové bomby na titulní stránce"
-msgstr ""
-
-msgid "Ceny se automaticky přepočítávají na Euro"
 msgstr ""
 
 msgid "Changing password"
@@ -499,6 +517,9 @@ msgstr ""
 msgid "DHL"
 msgstr ""
 
+msgid "DIČ: CZ 25415981"
+msgstr ""
+
 msgid "DPD"
 msgstr "DPD"
 
@@ -507,6 +528,9 @@ msgstr "Next"
 
 msgid "Další fotografie"
 msgstr "Next photo"
+
+msgid "Další hodnocení zákazníků"
+msgstr ""
 
 msgid "Další informace"
 msgstr ""
@@ -628,6 +652,9 @@ msgstr ""
 msgid "Domain"
 msgstr "Domain"
 
+msgid "Domain %domainName%"
+msgstr ""
+
 msgid "Doména"
 msgstr ""
 
@@ -643,14 +670,14 @@ msgstr "Recommended image size"
 msgid "Doprava"
 msgstr "Transport"
 
-msgid "Doprava ZDARMA od<br> 1 000 Kč"
-msgstr ""
-
 msgid "Doprava a platba"
 msgstr "Transport and payment"
 
 msgid "Doprava objednávky"
 msgstr "Order transport"
+
+msgid "Doprava při nákupu nad 1000 Kč zdarma"
+msgstr ""
 
 msgid "Doprava zdarma"
 msgstr "Free delivery"
@@ -693,6 +720,9 @@ msgstr "Download the personal information"
 
 msgid "Došlo ke změnám v košíku. Prosím, překontrolujte si produkty."
 msgstr "Cart content has been changed. Please check products."
+
+msgid "Dr. M. Horákové 76, <br>460 07 Liberec"
+msgstr ""
 
 msgid "Druhý článek v horním menu"
 msgstr "Second article in upper menu"
@@ -766,6 +796,9 @@ msgstr "By e-mail"
 msgid "E-shop URL address"
 msgstr ""
 
+msgid "E-shop attributes settings modified"
+msgstr ""
+
 msgid "E-shop na míru od"
 msgstr "E-shop tailored from"
 
@@ -835,6 +868,9 @@ msgstr "Error occurred"
 msgid "Error occurred when sending e-mail."
 msgstr "Error occurred when sending e-mail."
 
+msgid "Excl. VAT"
+msgstr ""
+
 msgid "Exclude from sale"
 msgstr ""
 
@@ -858,6 +894,9 @@ msgstr "Facebook"
 
 msgid "Fakturační adresa"
 msgstr "Billing address"
+
+msgid "Fakturační údaje"
+msgstr ""
 
 msgid "Files"
 msgstr ""
@@ -897,9 +936,6 @@ msgstr "GEIS"
 
 msgid "GLS"
 msgstr "GLS"
-
-msgid "Garance nejvýhodnější cenové nabídky"
-msgstr ""
 
 msgid "Generovat tento produkt do Mergado XML feedu"
 msgstr ""
@@ -976,8 +1012,14 @@ msgstr ""
 msgid "Hlídač dostupnosti"
 msgstr ""
 
+msgid "Hmotnost"
+msgstr ""
+
 msgid "Hodiny"
 msgstr "Hours"
+
+msgid "Hodnocení našich zákazníků"
+msgstr ""
 
 msgid "Hodnota"
 msgstr "Value"
@@ -1063,6 +1105,9 @@ msgstr "In a particular domain tab it is not possible to adjust the order and pl
 msgid "In a particular domain tab it is not possible to adjust the order and plunge of categories. Please go to the category detail or to overview of categories of all domains"
 msgstr ""
 
+msgid "Incl. VAT"
+msgstr ""
+
 msgid "Informace o zákazníkovi"
 msgstr ""
 
@@ -1092,6 +1137,9 @@ msgstr ""
 
 msgid "Items"
 msgstr "Items"
+
+msgid "IČO: 25415981"
+msgstr ""
 
 msgid "IČO: 27790487, DIČ: CZ27790487"
 msgstr "IR: 27790487, VAT no: CZ27790487"
@@ -1141,7 +1189,10 @@ msgstr "You are a member of Loyalty program"
 msgid "K produktu budete potřebovat"
 msgstr ""
 
-msgid "Kallkulačka se bude od této cenové hladiny zobrazovat na detailu produktu."
+msgid "Kalkulačka se bude od této cenové hladiny zobrazovat na detailu produktu."
+msgstr ""
+
+msgid "Kamenná prodejna"
 msgstr ""
 
 msgid "Karta"
@@ -1155,9 +1206,6 @@ msgstr "Category on Mall.cz"
 
 msgid "Kategorie článků"
 msgstr "Article categories"
-
-msgid "Každý týden"
-msgstr ""
 
 msgid "Ke každému nákupu dárek v hodnotě"
 msgstr "For every purchase we offer a gift with value of"
@@ -1215,9 +1263,6 @@ msgstr "Last order"
 
 msgid "Levý textový baner dole"
 msgstr "Text banner to the lower left side"
-
-msgid "Liberce"
-msgstr ""
 
 msgid "Link to password reset sent to e-mail <strong>{{ email }}</strong>."
 msgstr "Link to password reset sent to e-mail <strong>{{ email }}</strong>."
@@ -1288,6 +1333,12 @@ msgstr "Message"
 msgid "Meta description"
 msgstr "Meta description"
 
+msgid "Migrace - import CSV"
+msgstr ""
+
+msgid "Migrační CSV soubor"
+msgstr ""
+
 msgid "Minimum amount"
 msgstr "Minimum amount"
 
@@ -1300,6 +1351,12 @@ msgstr "Minimum cart value"
 msgid "Minimální cena košíku s DPH (v %currencySymbol%)"
 msgstr "Minimum cart value with VAT (in %currencySymbol%)"
 
+msgid "Minimální cena objednávky pro akci na dopravu"
+msgstr ""
+
+msgid "Minimální cena objednávky pro dopravu zdarma"
+msgstr ""
+
 msgid "Minimální hodnota objednávky"
 msgstr "Minimum order value"
 
@@ -1308,9 +1365,6 @@ msgstr "You can set minimum amount in main variant detail"
 
 msgid "Minuty"
 msgstr "Minutes"
-
-msgid "Moderní"
-msgstr ""
 
 msgid "Mohlo by vás zajímat"
 msgstr "Might interest you"
@@ -1322,6 +1376,12 @@ msgid "More information"
 msgstr "More information"
 
 msgid "Move"
+msgstr ""
+
+msgid "Možnost nákupu na splátky"
+msgstr ""
+
+msgid "Možnost vrácení zboží do 30 dnů"
 msgstr ""
 
 msgid "Možnosti dopravy"
@@ -1360,7 +1420,13 @@ msgstr ""
 msgid "Nabízené produkty"
 msgstr ""
 
+msgid "Nadpis"
+msgstr ""
+
 msgid "Nadrozměrný"
+msgstr ""
+
+msgid "Nahrát soubor"
 msgstr ""
 
 msgid "Najdete v kategoriích"
@@ -1441,8 +1507,11 @@ msgstr ""
 msgid "Nejoblíbenější kousky"
 msgstr "Most favorite pieces"
 
-msgid "Nemusíte mít za sebou naplavaných tisíce kilometrů, abyste zlepšili techniku a také výdrž. Poradíme vám."
-msgstr "You don't have to swim through thousands of kilometers to improve your technique and endurance. We will advise you."
+msgid "Nejprodávanější produkty"
+msgstr ""
+
+msgid "Nejširší sortiment - v nabídce více než 100&nbsp;000 produktů"
+msgstr ""
 
 msgid "Nemáte oprávnění vidět požadovanou stránku. Požádejte svého administrátora o udělení přístupu."
 msgstr "You are not authorized to see the page you requested. Ask your administrator to grant access."
@@ -1479,6 +1548,9 @@ msgstr "Optional name for administration"
 
 msgid "Nepovinný údaj"
 msgstr "Optional information"
+
+msgid "Nesouhlasím se zasláním dotazníku spokojenosti s nákupem od Heureky"
+msgstr ""
 
 msgid "Nesouhlasím se zasláním objednávky do programu Heureka Ověřeno zákazníky"
 msgstr "I do not agree with sending an order to the Heureka program Verified by customers"
@@ -1579,6 +1651,9 @@ msgstr "You will now be redirected to the GoPay payment gateway."
 msgid "Nákupní košík"
 msgstr ""
 
+msgid "Nálepka Prodloužená záruka"
+msgstr ""
+
 msgid "Násobky pro nákup můžete nastavit na kartě hlavní varianty."
 msgstr "You can set multiples in main variant detail."
 
@@ -1593,6 +1668,9 @@ msgstr "Gift name - product"
 
 msgid "Název pobočky"
 msgstr "Shop name"
+
+msgid "Název pro feed"
+msgstr ""
 
 msgid "Název produktu"
 msgstr ""
@@ -1686,6 +1764,9 @@ msgstr "Sent"
 
 msgid "Odesílána"
 msgstr "Being sent"
+
+msgid "Odkaz"
+msgstr ""
 
 msgid "Odkaz pro sledování zásilky"
 msgstr "Link to shipment tracking"
@@ -1789,17 +1870,26 @@ msgstr "Order number"
 msgid "Orders value"
 msgstr "Orders value"
 
+msgid "Osobni odběr"
+msgstr ""
+
 msgid "Osobní údaje"
 msgstr "Personal information"
 
 msgid "Ostatní"
 msgstr "Others"
 
+msgid "Otevírací doba"
+msgstr ""
+
 msgid "Otevřena"
 msgstr "Open"
 
 msgid "Our customers who bought this bought also"
 msgstr "Our customers who bought this bought also"
+
+msgid "Ověřený zákazník"
+msgstr ""
 
 msgid "Ozvěte se nejlépe ve všední dny mezi"
 msgstr "Get in touch on weekdays between"
@@ -1891,11 +1981,14 @@ msgstr "Valid until"
 msgid "Platný od"
 msgstr "Valid from"
 
+msgid "Platí do"
+msgstr ""
+
+msgid "Platí od"
+msgstr ""
+
 msgid "Platí pro"
 msgstr "Valid for"
-
-msgid "Plavecké potřeby"
-msgstr "Swimming equipment"
 
 msgid "Please check the correctness of all data filled."
 msgstr "Please check the correctness of all data filled."
@@ -1972,9 +2065,6 @@ msgstr "Description of main images"
 msgid "Popular categories"
 msgstr "Popular categories"
 
-msgid "Poradíme s plaváním"
-msgstr "We'll advise about swimming"
-
 msgid "Poslední aktualizace z IS"
 msgstr ""
 
@@ -2000,6 +2090,9 @@ msgid "Povolit nadrozměrné produkty"
 msgstr ""
 
 msgid "Povolit objemné produkty"
+msgstr ""
+
+msgid "Pozice"
 msgstr ""
 
 msgid "Poznejte nás"
@@ -2079,6 +2172,9 @@ msgstr ""
 
 msgid "Prodejny"
 msgstr "Stores"
+
+msgid "Prodloužená záruka"
+msgstr ""
 
 msgid "Product <strong>{{ name }}</strong> ({{ quantity|formatNumber }} {{ unitName }}) added to the cart"
 msgstr "Product <strong>{{ name }}</strong> ({{ quantity|formatNumber }} {{ unitName }}) added to the cart"
@@ -2202,9 +2298,6 @@ msgstr "The first article in upper menu"
 
 msgid "Prázdný"
 msgstr "Empty"
-
-msgid "Představujeme trendy, radíme jak trénovat a ukazujeme naši firmu"
-msgstr "We present trends, advise how to train and show our company"
 
 msgid "Předvýpis kategorií"
 msgstr "Pre-listing of categories"
@@ -2332,16 +2425,13 @@ msgstr "Expand"
 msgid "Rozlišující parametr"
 msgstr "Distinguishing parameter"
 
-msgid "Rybařině rozumíme. V týmu je i"
+msgid "Rybařině rozumíme - v teamu je i mistr světa"
 msgstr ""
 
 msgid "Rybařině rozumíme. V týmu je i mistr světa"
 msgstr ""
 
 msgid "Rybky"
-msgstr ""
-
-msgid "Rybářům pomáháme od<br> roku 2000"
 msgstr ""
 
 msgid "S čím potřebujete pomoct?"
@@ -2506,7 +2596,7 @@ msgstr "Discount"
 msgid "Sleva %"
 msgstr ""
 
-msgid "Sleva %percent% (BP)"
+msgid "Sleva %percent%"
 msgstr ""
 
 msgid "Sleva na celý nákup"
@@ -2516,6 +2606,9 @@ msgid "Sleva na celý nákup byla smazána"
 msgstr ""
 
 msgid "Sleva na celý nákup neexistuje"
+msgstr ""
+
+msgid "Sleva za registraci"
 msgstr ""
 
 msgid "Slevové kupóny byly smazány."
@@ -2548,9 +2641,6 @@ msgstr "Promo code is not usable for any product in your cart."
 msgid "Slevový kód"
 msgstr "Promo code"
 
-msgid "Slevy pro každého až 18 %"
-msgstr ""
-
 msgid "Slovakia"
 msgstr ""
 
@@ -2562,6 +2652,9 @@ msgstr ""
 
 msgid "Smazat všechny"
 msgstr "Delete all"
+
+msgid "Smazat všechny soubory"
+msgstr ""
 
 msgid "Snažíte se koupit více kusů, než je skladem."
 msgstr "You are trying to buy more pieces than there are in stock."
@@ -2587,9 +2680,6 @@ msgstr "Do you agree to cookie collection?"
 msgid "Související zboží"
 msgstr "Related products"
 
-msgid "Specialisti na běh"
-msgstr "Running specialists"
-
 msgid "Spisová značka C 51890 vedená u rejstříkového soudu v Ostravě."
 msgstr "File number C 51890 kept by the Registration Court in Ostrava."
 
@@ -2607,6 +2697,9 @@ msgstr "Export to IS status"
 
 msgid "Stav platby GoPay"
 msgstr "GoPay payment status"
+
+msgid "Stav přenosu"
+msgstr ""
 
 msgid "Stav přenosu do IS"
 msgstr "Transfer to IS status"
@@ -2655,6 +2748,9 @@ msgstr "Subscription to e-mail newsletter"
 
 msgid "Sídlo"
 msgstr "Residence"
+
+msgid "TOP Značky"
+msgstr ""
 
 msgid "TOPTRANS"
 msgstr "TOPTRANS"
@@ -2706,6 +2802,9 @@ msgstr "Text"
 
 msgid "Text tlačítka"
 msgstr "Button text"
+
+msgid "Text v hlavičce"
+msgstr ""
 
 msgid "Text zprávy"
 msgstr "Message text"
@@ -2881,6 +2980,9 @@ msgstr ""
 msgid "User not found."
 msgstr "User not found."
 
+msgid "Ušetříte %price%"
+msgstr ""
+
 msgid "Už máš aplikován jiný slevový kupón, a tento kupón nelze kombinovat."
 msgstr "You already have a different promo code applied and this code cannot be combined."
 
@@ -2904,6 +3006,9 @@ msgstr "In the first column"
 
 msgid "V pátek"
 msgstr "On Friday"
+
+msgid "V případě jakýchkoliv dotazů volejte na číslo"
+msgstr ""
 
 msgid "V sobotu"
 msgstr "On Saturday"
@@ -3094,6 +3199,9 @@ msgstr "No product found"
 msgid "Vyhledávání výrazu"
 msgstr ""
 
+msgid "Vyhlídková 655, 463 12 Liberec 25<br>Vedené u Krajského soudu v Ústí nad Labem oddíl C,<br> vložka 16777."
+msgstr ""
+
 msgid "Vyjmout ze slev za registraci"
 msgstr ""
 
@@ -3105,12 +3213,6 @@ msgstr ""
 
 msgid "Vyplnit dodací údaje"
 msgstr "Fill in delivery information"
-
-msgid "Vyprodané zboží"
-msgstr ""
-
-msgid "Vyprodané zboží se zobrazuje ve výpisech a lze jej vyhledat. Detail tohoto zboží je dostupný přímým přístupem z URL, zboží ale nelze vložit do košíku."
-msgstr ""
 
 msgid "Vytvořeno"
 msgstr ""
@@ -3184,7 +3286,13 @@ msgstr ""
 msgid "Výrobce"
 msgstr ""
 
+msgid "Výrobci"
+msgstr ""
+
 msgid "Výrobek"
+msgstr ""
+
+msgid "Výrobek od dodavatele"
 msgstr ""
 
 msgid "Výsledky výrazu:"
@@ -3196,11 +3304,11 @@ msgstr "Loyalty program"
 msgid "Větší množství není možné nakoupit"
 msgstr ""
 
-msgid "Vše pro běhání"
-msgstr "Running Equipment"
-
 msgid "Všechny produkty"
 msgstr "All products"
+
+msgid "Vždy vyčkejte, až vás budeme informovat, že zboží je připravené k odběru."
+msgstr ""
 
 msgid "Yes"
 msgstr "Yes"
@@ -3262,8 +3370,11 @@ msgstr "Enter the code"
 msgid "Zadejte město nebo PSČ:"
 msgstr "Enter town or zip code:"
 
-msgid "Zaměřujeme se na triatlon. Proto vám dokážeme poradit vybrat správné cyklistické a plavecké vybavení, ale také běžecké."
-msgstr "We focus on triatlon. Because of that we can advise you how to choose the right cycling, swimming and running equipment."
+msgid "Zahraniční dodavatel"
+msgstr ""
+
+msgid "Založeno 2000 - tradice prodeje již 20 let"
+msgstr ""
 
 msgid "Zaplatit"
 msgstr "Pay"
@@ -3273,6 +3384,12 @@ msgstr "Forgotten password?"
 
 msgid "Zatím nepřeneseno"
 msgstr "Not yet transfered"
+
+msgid "Zatím nepřeneseno nebo chyba při přenosu"
+msgstr ""
+
+msgid "Zaškrtnout všechny parametry"
+msgstr ""
 
 msgid "Zboží do Česka"
 msgstr ""
@@ -3397,6 +3514,12 @@ msgstr ""
 msgid "Zásilkovna"
 msgstr "Zásilkovna"
 
+msgid "Zásilkovna CZ"
+msgstr ""
+
+msgid "Zásilkovna SK"
+msgstr ""
+
 msgid "Zítra"
 msgstr "Tomorrow"
 
@@ -3413,6 +3536,9 @@ msgid "a máte"
 msgstr ""
 
 msgid "a registrace"
+msgstr ""
+
+msgid "a telefon"
 msgstr ""
 
 msgid "a údaje vám předvyplníme."
@@ -3457,9 +3583,6 @@ msgstr ""
 msgid "ks"
 msgstr ""
 
-msgid "mistr světa"
-msgstr ""
-
 msgid "možnost získat"
 msgstr "way to obtain"
 
@@ -3496,9 +3619,6 @@ msgstr "unknown"
 msgid "neznámé"
 msgstr "unknown"
 
-msgid "nová nabídka"
-msgstr ""
-
 msgid "o nákupu"
 msgstr "about purchase"
 
@@ -3514,12 +3634,6 @@ msgstr "on stock"
 msgid "osobních údajů"
 msgstr "personal information"
 
-msgid "pouze členy Věrnostního programu"
-msgstr "only members of Loyalty program"
-
-msgid "požadovaná stránk na našem"
-msgstr "requested page on our"
-
 msgid "požadovaná stránka na našem"
 msgstr ""
 
@@ -3529,7 +3643,7 @@ msgstr ""
 msgid "problémů"
 msgstr "problems"
 
-msgid "prodejna v centru"
+msgid "prodejna@tropicfishing.cz"
 msgstr ""
 
 msgid "prodejně"
@@ -3552,6 +3666,15 @@ msgstr ""
 
 msgid "souhlasím s"
 msgstr "agree to"
+
+msgid "store1"
+msgstr ""
+
+msgid "store2"
+msgstr ""
+
+msgid "store3"
+msgstr ""
 
 msgid "stores"
 msgstr "stores"
@@ -3587,9 +3710,6 @@ msgid "za"
 msgstr "for"
 
 msgid "za registraci může platit"
-msgstr ""
-
-msgid "za výhodné ceny"
 msgstr ""
 
 msgid "za zvýhodněnou cenu"
@@ -3648,6 +3768,9 @@ msgstr ""
 
 msgid "Úvod"
 msgstr "Introduction"
+
+msgid "Č. ú.: 115-7477930207/0100"
+msgstr ""
 
 msgid "Čas konce platnosti poukazu"
 msgstr ""
